--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "datatables.net": "^2.3.5",
+        "datatables.net-bs5": "^2.3.5",
+        "datatables.net-dt": "^2.3.5",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.6.1",
@@ -41,6 +45,7 @@
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
+        "vue-hot-toast": "^0.0.1-rc.4",
         "vue-input-otp": "^0.3.2"
     },
     "optionalDependencies": {
